--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,10 @@
 <!--[if (gte IE 9)|!(IE)]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-
+  <!-- 
+    Copyright ©Yann Esposito 2011
+    Extended from HTML5boilerplate
+  -->
   <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
        Remove this if you use the .htaccess -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
