--- a/site/index.html
+++ b/site/index.html
@@ -14,9 +14,12 @@
        Remove this if you use the .htaccess -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title></title>
+  <title><%= @item[title] %></title>
   <meta name="description" content="">
   <meta name="author" content="">
+
+  <link href='http://fonts.googleapis.com/css?family=Expletus+Sans:bold' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Kreon:regular,bold' rel='stylesheet' type='text/css'>
 
   <!-- Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -42,9 +45,10 @@
   <header>
     <nav id="mainnav">
         <ul>
-            <li><a href="#">{item 1}</a></li>
-            <li><a href="#">{item 2}</a></li>
-            <li><a href="#">{item 3}</a></li>
+            <li><a href="#">{item 1}</a>
+            </li><li><a href="#">{item 2}</a>
+            </li><li><a href="#">{item 3}</a>
+            </li>
         </ul>
     </nav>
   </header>
