--- a/site/Scratch/fr/support/index.html
+++ b/site/Scratch/fr/support/index.html
@@ -76,7 +76,16 @@
         <article>
             <div class="content">
                 
-<p>A problem? A remark? Just send me a mail: </p>
+<p>A problem? A remark? </p>
+
+<form name="email" id="email" action="/contact" method="post">
+<input type="text" name="name" value="name" />
+<input type="text" name="mail" value="Your email" />
+<input type="textarea" name="body" value="" />
+<input type="submit" value="Send" />
+</form>
+
+<p>Or just send me a mail: </p>
 
 <p class="big"><a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#121;&#097;&#110;&#110;&#046;&#101;&#115;&#112;&#111;&#115;&#105;&#116;&#111;&#046;&#104;&#101;&#108;&#112;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#121;&#097;&#110;&#110;&#046;&#101;&#115;&#112;&#111;&#115;&#105;&#116;&#111;&#046;&#104;&#101;&#108;&#112;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a></p>
 
