Added support form

--- a/site/Scratch/fr/support/index.html
+++ b/site/Scratch/fr/support/index.html
@@ -79,17 +79,21 @@
 <p>A problem? A remark? </p>
 
 <form name="email" id="email" action="/contact" method="post">
-<input type="text" name="name" value="name" />
-<input type="text" name="mail" value="Your email" />
-<input type="textarea" name="body" value="" />
+<input type="text" name="name" value="Your name" onfocus="this.value=<code>" style="display: block;width=20em" />
+<input type="text" name="mail" value="Your email" onfocus="this.value=</code>" style="display: block; width=20em" />
+<textarea name="body" id="bodytextarea" value="" onfocus="this.value=''" style="display: block; height: 10em; width: 30em;">Enter your comment here</textarea>
 <input type="submit" value="Send" />
 </form>
 
-<p>Or just send me a mail: </p>
+<p><br /></p>
+
+<p>By mail:</p>
 
 <p class="big"><a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#121;&#097;&#110;&#110;&#046;&#101;&#115;&#112;&#111;&#115;&#105;&#116;&#111;&#046;&#104;&#101;&#108;&#112;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#121;&#097;&#110;&#110;&#046;&#101;&#115;&#112;&#111;&#115;&#105;&#116;&#111;&#046;&#104;&#101;&#108;&#112;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a></p>
 
-<p>Tell me on twitter: <a href="http://twitter.com/yogsototh">@yogsototh</a></p>
+<p>Via twitter: </p>
+
+<p class="big"><a href="http://twitter.com/yogsototh">@yogsototh</a></p>
 
             </div>
             <footer>
