--- a/site/index.html
+++ b/site/index.html
@@ -50,7 +50,7 @@
     <div id="choixlang"><a href="/Scratch/fr/" onclick="setLanguage('fr')">en Français</a></div>
     <nav id="mainnav">
         <ul>
-            <ul><li><span class="active" title="You're here.">YPassword</span></li><li><a href="/Scratch/en/blog/">Blog</a></li><li><a href="/Scratch/en/about/">About</a></li></ul>
+            <ul><li><span class="active" title="You're here.">YPassword</span></li><li><a href="/Scratch/en/blog/">Blog</a></li><li><a href="/Scratch/en/support/">Support</a></li></ul>
         </ul>
     </nav>
   </header>
