Changed feed address

--- a/site/Scratch/en/support/index.html
+++ b/site/Scratch/en/support/index.html
@@ -40,13 +40,13 @@
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="/js/libs/modernizr-1.7.min.js"></script>
 
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/yannespositocomen"/>
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/ypasswordespozitocomen"/>
 
 </head>
 
 <body lang="en">
   <header>
-    <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/yannespositocomen">Subscribe</a></div>
+    <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomen">Subscribe</a></div>
     <div id="choixlang"><a href="/Scratch/fr/support/" onclick="setLanguage('fr')">en Français</a></div>
     <nav id="mainnav">
         <ul>
@@ -98,7 +98,7 @@
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li>Modified: <time> 05/08/2011</time></li>
+                    <li>Modified: <time> 05/12/2011</time></li>
                     <li><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Copyright ©, Yann Esposito</a></li>
                 </ul>
             </footer>
