--- a/site/Scratch/fr/support/index.html
+++ b/site/Scratch/fr/support/index.html
@@ -40,13 +40,13 @@
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="/js/libs/modernizr-1.7.min.js"></script>
 
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/yannespositocomfr"/>
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/ypasswordespozitocomfr"/>
 
 </head>
 
 <body lang="fr">
   <header>
-    <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/yannespositocomfr">s'abonner</a></div>
+    <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomfr">s'abonner</a></div>
     <div id="choixlang"><a href="/Scratch/en/support/" onclick="setLanguage('en')">in English</a></div>
     <nav id="mainnav">
         <ul>
@@ -98,7 +98,7 @@
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li>modifié le : <time> 08/05/2011</time></li>
+                    <li>modifié le : <time> 12/05/2011</time></li>
                     <li><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.fr">Droits de reproduction ©, Yann Esposito</a></li>
                 </ul>
             </footer>
