--- a/site/index.html
+++ b/site/index.html
@@ -59,7 +59,9 @@
 
       <div id="main" role="main">
         <hgroup>
-          <h1>YPassword</h1>
+          <h1>
+    <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&mt=8">YPassword<span class="nicer">&raquo;</span></a>
+</h1>
           
         </hgroup>
         
@@ -109,10 +111,14 @@
 
 <div id="securecontent" class="slideshow big"><div class="inner">
 YPassword use SHA1
+<img src="/img/main_password.jpg" alt="main password view" />
 </div></div>
 
 <div id="easycontent" class="slideshow big"><div class="inner">
 You remember only one password the rest follow.
+<img src="/img/main_view.jpg" alt="main view" />
+If you click on "go to website" you are redirected to the website.
+Your password is copied, you can paste it.
 </div></div>
 
 <div id="portablecontent" class="slideshow big">
@@ -125,6 +131,22 @@ You remember only one password the rest follow.
         </ul>
     </div>
 </div>
+
+<div class="flush"></div>
+<div class="block left">
+        <div class="inner">
+            <h3>
+                <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&amp;mt=8"> Get it! 
+                    <span class="nicer">»</span> 
+                </a>
+            </h3>
+            <p>
+                On the Apple Store
+            </p>
+        </div>
+    </div>
+
+<div class="flush"></div>
 
             </div>
             <footer>
