Fixed worst errors

--- a/site/Scratch/fr/index.html
+++ b/site/Scratch/fr/index.html
@@ -111,12 +111,12 @@
 
 <div id="securecontent" class="slideshow big"><div class="inner">
 YPassword use SHA1
-<img src="/img/main_password.jpg" alt="main password view" />
+<img src="/Scratch//img/blog/2011-05-05-Screenshots/main_password.jpg" alt="main password view" style="display:block;" />
 </div></div>
 
 <div id="easycontent" class="slideshow big"><div class="inner">
 You remember only one password the rest follow.
-<img src="/img/main_view.jpg" alt="main view" />
+<img src="/Scratch//img/blog/2011-05-05-Screenshots/main_view.jpg" alt="main view" style="display:block;" />
 If you click on "go to website" you are redirected to the website.
 Your password is copied, you can paste it.
 </div></div>
@@ -151,7 +151,7 @@ Your password is copied, you can paste it.
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li>modifié le : <time> 05/05/2011</time></li>
+                    <li>modifié le : <time> 13/05/2011</time></li>
                     <li><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.fr">Droits de reproduction ©, Yann Esposito</a></li>
                 </ul>
             </footer>
