--- a/site/Scratch/en/index.html
+++ b/site/Scratch/en/index.html
@@ -60,7 +60,7 @@
       <div id="main" role="main">
         <hgroup>
           <h1>
-    <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&mt=8">YPassword<span class="nicer">&raquo;</span></a>
+    <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&mt=8"><img src="/img/Icon-512.png" style="height: 128px; margin: 24px;vertical-align: middle;"/>YPassword<span class="nicer">&raquo;</span></a>
 </h1>
           
         </hgroup>
@@ -151,7 +151,7 @@ Your password is copied, you can paste it.
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li>Modified: <time> 05/13/2011</time></li>
+                    <li>Modified: <time> 05/14/2011</time></li>
                     <li><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Copyright ©, Yann Esposito</a></li>
                 </ul>
             </footer>
