--- a/site/index.html
+++ b/site/index.html
@@ -60,7 +60,7 @@
       <div id="main" role="main">
         <hgroup>
           <h1>
-    <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&mt=8">YPassword<span class="nicer">&raquo;</span></a>
+    <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&mt=8"><img src="/img/Icon-512.png" style="height: 128px; margin: 24px;vertical-align: middle;"/>YPassword<span class="nicer">&raquo;</span></a>
 </h1>
           
         </hgroup>
@@ -111,12 +111,12 @@
 
 <div id="securecontent" class="slideshow big"><div class="inner">
 YPassword use SHA1
-<img src="/Scratch//img/blog/2011-05-05-Screenshots/main_password.jpg" alt="main password view" style="display:block;" />
+<img src="/Scratch//img/blog/2011-05-05-Screenshots/main_password.jpg" alt="main password view" style="display:block; margin-left:0;" />
 </div></div>
 
 <div id="easycontent" class="slideshow big"><div class="inner">
 You remember only one password the rest follow.
-<img src="/Scratch//img/blog/2011-05-05-Screenshots/main_view.jpg" alt="main view" style="display:block;" />
+<img src="/Scratch//img/blog/2011-05-05-Screenshots/main_view.jpg" alt="main view" style="display:block;margin-left:0;" />
 If you click on "go to website" you are redirected to the website.
 Your password is copied, you can paste it.
 </div></div>
@@ -151,7 +151,7 @@ Your password is copied, you can paste it.
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li>Modified: <time> 05/13/2011</time></li>
+                    <li>Modified: <time> 05/14/2011</time></li>
                     <li><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Copyright ©, Yann Esposito</a></li>
                 </ul>
             </footer>
@@ -238,5 +238,12 @@ $('document').ready(function() {
 </script>
 <noscript><p><img alt="Clicky" width="1" height="1" src="http://in.getclicky.com/66374971ns.gif" /></p></noscript>
     
+   <script type="text/javascript">
+            (function() {
+             var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
+             uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/JgOrVPRCzoip6TmO9Rkbw.js';
+             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
+             })();
+        </script>
 </body>
 </html>
