--- a/site/Scratch/fr/index.html
+++ b/site/Scratch/fr/index.html
@@ -70,7 +70,7 @@
             <div class="content">
                 
 <div id="mainlinks">
-<div class="block left secure">
+<div class="block left secure clickable">
         <div class="inner">
             <h3>
                 <a href="javascript:return false;"> Secure 
@@ -82,7 +82,7 @@
             </p>
         </div>
     </div>
-<div class="block left easy">
+<div class="block left easy clickable">
         <div class="inner">
             <h3>
                 <a href="javascript:return false;"> Easy 
@@ -94,7 +94,7 @@
             </p>
         </div>
     </div>
-<div class="block left portable">
+<div class="block left portable clickable">
         <div class="inner">
             <h3>
                 <a href="javascript:return false;"> Portable 
@@ -134,7 +134,7 @@ Your password is copied, you can paste it.
 </div>
 
 <div class="flush"></div>
-<div class="block left">
+<div class="block clickable">
         <div class="inner">
             <h3>
                 <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&amp;mt=8"> Get it! 
