--- a/site/index.html
+++ b/site/index.html
@@ -34,11 +34,12 @@
   <!--[if lt IE 8]>
     <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <![endif]-->
+  <!-- CSS: blueprint buttons -->
+   <link href="/css/buttons.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
   <!-- CSS: implied media="all" -->
   <!-- Google Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Expletus+Sans:bold' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Kreon:regular,bold' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Molengo:regular,bold' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/main.css">
 
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
@@ -69,7 +70,7 @@
             <div class="content">
                 
 <div id="mainlinks">
-<div class="block left secure">
+<div class="block left secure clickable">
         <div class="inner">
             <h3>
                 <a href="javascript:return false;"> Secure 
@@ -81,7 +82,7 @@
             </p>
         </div>
     </div>
-<div class="block left easy">
+<div class="block left easy clickable">
         <div class="inner">
             <h3>
                 <a href="javascript:return false;"> Easy 
@@ -93,7 +94,7 @@
             </p>
         </div>
     </div>
-<div class="block left portable">
+<div class="block left portable clickable">
         <div class="inner">
             <h3>
                 <a href="javascript:return false;"> Portable 
@@ -133,7 +134,7 @@ Your password is copied, you can paste it.
 </div>
 
 <div class="flush"></div>
-<div class="block left">
+<div class="block clickable">
         <div class="inner">
             <h3>
                 <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&amp;mt=8"> Get it! 
@@ -151,7 +152,7 @@ Your password is copied, you can paste it.
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li>Modified: <time>05/14/2011</time></li>
+                    <li>Modified: <time>05/16/2011</time></li>
                     <li><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Copyright ©, Yann Esposito</a></li>
                 </ul>
             </footer>
