--- a/site/Scratch/en/index.html
+++ b/site/Scratch/en/index.html
@@ -52,13 +52,13 @@
 <body lang="en" class="bp">
   <div id="container">
     <header>
-      <hgroup>
-        <h1>
-    <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&mt=8">YPassword<span class="nicer">&raquo;</span></a>
-</h1>
-      </hgroup>
       <div id="choixlang"><a href="/Scratch/fr/" onclick="setLanguage('fr')">en Français</a></div>
       <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomen">Subscribe</a></div>
+      <hgroup>
+        <h1>
+    <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&mt=8">YPassword</a>
+</h1>
+      </hgroup>
       <nav id="mainnav">
           <ul>
               <ul><li><span class="active" title="You're here.">YPassword</span></li><li><a href="/Scratch/en/blog/">Blog</a></li><li><a href="/Scratch/en/support/">Support</a></li></ul>
@@ -152,7 +152,7 @@ Your password is copied, you can paste it.
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li>Modified: <time>05/16/2011</time></li>
+                    <li>Modified: <time>06/28/2011</time></li>
                     <li><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Copyright ©, Yann Esposito</a></li>
                 </ul>
             </footer>
