--- a/site/Scratch/fr/index.html
+++ b/site/Scratch/fr/index.html
@@ -28,16 +28,6 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 
-  <!-- CSS: blueprint framework -->
-  <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <link href="/css/print.css" media="print" rel="stylesheet" type="text/css" />
-  <!--[if lt IE 8]>
-    <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <![endif]-->
-  <!-- CSS: blueprint buttons -->
-   <link href="/css/buttons.css" media="screen, projection" rel="stylesheet" type="text/css" />
-
-  <!-- CSS: implied media="all" -->
   <!-- Google Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Molengo:regular,bold' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/main.css">
@@ -52,13 +42,15 @@
 <body lang="fr" class="bp">
   <div id="container">
     <header>
-      <div id="choixlang"><a href="/Scratch/en/" onclick="setLanguage('en')">in English</a></div>
-      <hgroup>
+      <div id="prelinks">
+           <div id="choixlang"><a href="/Scratch/en/" onclick="setLanguage('en')">in English</a></div>
+           <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomfr">s'abonner</a></div>
+       </div>
+      <hgroup id="maintitle">
         <h1>
     <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&mt=8">YPassword</a>
 </h1>
       </hgroup>
-      <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomfr">s'abonner</a></div>
       <nav id="mainnav">
           <ul>
               <ul><li><span class="active" title="You're here.">YPassword</span></li><li><a href="/Scratch/fr/blog/">Blog</a></li><li><a href="/Scratch/fr/support/">Aide</a></li></ul>
