--- a/site/Scratch/fr/support/index.html
+++ b/site/Scratch/fr/support/index.html
@@ -28,16 +28,6 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 
-  <!-- CSS: blueprint framework -->
-  <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <link href="/css/print.css" media="print" rel="stylesheet" type="text/css" />
-  <!--[if lt IE 8]>
-    <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <![endif]-->
-  <!-- CSS: blueprint buttons -->
-   <link href="/css/buttons.css" media="screen, projection" rel="stylesheet" type="text/css" />
-
-  <!-- CSS: implied media="all" -->
   <!-- Google Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Molengo:regular,bold' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/main.css">
@@ -52,8 +42,11 @@
 <body lang="fr" class="bp">
   <div id="container">
     <header>
-      <div id="choixlang"><a href="/Scratch/en/support/" onclick="setLanguage('en')">in English</a></div>
-      <hgroup>
+      <div id="prelinks">
+           <div id="choixlang"><a href="/Scratch/en/support/" onclick="setLanguage('en')">in English</a></div>
+           <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomfr">s'abonner</a></div>
+       </div>
+      <hgroup id="maintitle">
         <h1>
 <span style="font-weight: normal; margin-top: 0; line-height: 1ex">
     <span style="letter-spacing:-.10em">YPassword</span>
@@ -62,7 +55,6 @@
     <span style="letter-spacing: 1em">Support</span>
 </h2>
       </hgroup>
-      <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomfr">s'abonner</a></div>
       <nav id="mainnav">
           <ul>
               <ul><li><a href="/Scratch/fr/">YPassword</a></li><li><a href="/Scratch/fr/blog/">Blog</a></li><li><span class="active" title="You're here.">Aide</span></li></ul>
