Try to use images.

--- a/site/Scratch/fr/index.html
+++ b/site/Scratch/fr/index.html
@@ -47,9 +47,9 @@
            <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomfr">s'abonner</a></div>
        </div>
       <hgroup id="maintitle">
-        <h1>
-    <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&mt=8">YPassword</a>
-</h1>
+        <h1>YPassword</h1><h2>
+    <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&mt=8">Get it! &raquo;</a>
+<h2>
       </hgroup>
       <nav id="mainnav">
           <ul>
@@ -63,7 +63,7 @@
                 
 <div id="securecontent" class="slideshow big"><div class="inner">
 YPassword use SHA1
-<img src="/Scratch//img/blog/2011-05-05-Screenshots/main_password.jpg" alt="main password view" style="display:block; margin-left:0;" />
+<img src="/img/main/iPhone_Easy.png" class="clean" alt="main password view" />
 </div></div>
 
 <div id="easycontent" class="slideshow big"><div class="inner">
@@ -103,7 +103,7 @@ Your password is copied, you can paste it.
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li>modifié le : <time>28/06/2011</time></li>
+                    <li>modifié le : <time>09/07/2011</time></li>
                     <li><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.fr">Droits de reproduction ©, Yann Esposito</a></li>
                 </ul>
             </footer>
