--- a/site/Scratch/fr/support/index.html
+++ b/site/Scratch/fr/support/index.html
@@ -47,13 +47,7 @@
            <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomfr">s'abonner</a></div>
        </div>
       <hgroup id="maintitle">
-        <h1>
-<span style="font-weight: normal; margin-top: 0; line-height: 1ex">
-    <span style="letter-spacing:-.10em">YPassword</span>
-</span>
-</h1><h2>
-    <span style="letter-spacing: 1em">Support</span>
-</h2>
+        <h1>YPassword</h1><h2>Aide<h2>
       </hgroup>
       <nav id="mainnav">
           <ul>
@@ -64,8 +58,7 @@
       <div id="main" role="main">
         <article>
             <div class="content">
-                
-<p>A problem? A remark? </p>
+                <p>A problem? A remark? </p>
 
 <form name="email" id="email" action="/contact" method="post">
 <input type="text" name="name" value="Your name" onfocus="this.value=<code>" style="display: block;width=20em" />
