--- a/site/Scratch/fr/index.html
+++ b/site/Scratch/fr/index.html
@@ -61,17 +61,32 @@
         <article>
             <div class="content">
                 
-<div id="securecontent" class="slideshow big"><div class="inner">
-YPassword use SHA1
-<img src="/img/main/iPhone_Easy.png" class="clean" alt="main password view" />
-</div></div>
+<div id="securecontent" class="slideshow big">
+    <div class="inner">
+        <div class="leftcontent">
+            <img src="/img/main/iPhone pw.png" class="clean" alt="main password view" style="float:left" />
+        </div>
+        <div class="rightcontent">
+            <h3>Secure</h3>
+            YPassword use SHA1
+        </div>
+    </div>
+    <div class="flush"></div>
+</div>
 
 <div id="easycontent" class="slideshow big"><div class="inner">
-You remember only one password the rest follow.
-<img src="/Scratch//img/blog/2011-05-05-Screenshots/main_view.jpg" alt="main view" style="display:block;margin-left:0;" />
-If you click on "go to website" you are redirected to the website.
-Your password is copied, you can paste it.
-</div></div>
+        <div class="rightcontent">
+            <img src="/img/main/iPhone_Easy.png" alt="main view" style="display:block;margin-left:0;float:right" />
+        </div>
+        <div class="leftcontent">
+            <h3>Easy</h3>
+            You remember only one password the rest follow.
+            If you click on "go to website" you are redirected to the website.
+            Your password is copied, you can paste it.
+        </div>
+    </div>
+    <div class="flush"></div>
+</div>
 
 <div id="portablecontent" class="slideshow big">
     <div class="inner">
@@ -82,6 +97,7 @@ Your password is copied, you can paste it.
             <li> on UNIX system using the command line <code>openssl</code> </li>
         </ul>
     </div>
+    <div class="flush"></div>
 </div>
 
 <div class="flush"></div>
@@ -103,7 +119,7 @@ Your password is copied, you can paste it.
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li>modifié le : <time>09/07/2011</time></li>
+                    <li>modifié le : <time>10/07/2011</time></li>
                     <li><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.fr">Droits de reproduction ©, Yann Esposito</a></li>
                 </ul>
             </footer>
