--- a/site/index.html
+++ b/site/index.html
@@ -61,60 +61,40 @@
         <article>
             <div class="content">
                 
-<div id="securecontent" class="slideshow big">
-    <div class="inner">
-        <div class="leftcontent">
-            <img src="/img/main/iPhone pw.png" class="clean" alt="main password view" style="float:left" />
-        </div>
-        <div class="rightcontent">
-            <h3>Secure</h3>
-            YPassword use SHA1
-        </div>
-    </div>
+<div id="secure" class="slideshow">
+    <img src="/img/main/iPhone pw.jpg" class="leftimage" alt="Main Password View" />
+    <h3>Secure</h3>
+    <p>YPassword use SHA1</p>
     <div class="flush"></div>
 </div>
 
-<div id="easycontent" class="slideshow big"><div class="inner">
-        <div class="rightcontent">
-            <img src="/img/main/iPhone_Easy.png" alt="main view" style="display:block;margin-left:0;float:right" />
-        </div>
-        <div class="leftcontent">
-            <h3>Easy</h3>
-            You remember only one password the rest follow.
-            If you click on "go to website" you are redirected to the website.
-            Your password is copied, you can paste it.
-        </div>
-    </div>
+<div id="easy" class="slideshow">
+    <img src="/img/main/iPhone_Easy.jpg" alt="main view" class="rightimage" />
+    <h3>Easy</h3>
+    <p>You remember only one password the rest follow.
+    If you click on "go to website" you are redirected to the website.
+    Your password is copied, you can paste it.
+    </p>
     <div class="flush"></div>
 </div>
 
-<div id="portablecontent" class="slideshow big">
-    <div class="inner">
-        You can use YPassword on 
-        <ul>
-            <li> iPhone, </li>
-            <li> Mac using Dashboard widget, </li>
-            <li> on UNIX system using the command line <code>openssl</code> </li>
-        </ul>
-    </div>
+<div id="portable" class="slideshow">
+    <p>You can use YPassword on: </p>
+    <ul>
+        <li> iPhone, </li>
+        <li> Mac using Dashboard widget, </li>
+        <li> on UNIX system using the command line <code>openssl</code> </li>
+    </ul>
     <div class="flush"></div>
 </div>
 
 <div class="flush"></div>
-<div class="block clickable">
-        <div class="inner">
-            <h3>
-                <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&amp;mt=8"> Get it! 
-                    <span class="nicer">»</span> 
-                </a>
-            </h3>
-            <p>
-                On the Apple Store
-            </p>
-        </div>
-    </div>
 
-<div class="flush"></div>
+<div class="center">
+<a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&amp;mt=8">
+    <img src="/img/main/Available_appstore.jpg" alt="Get it!" />
+</a>
+</div>
 
             </div>
             <footer>
