--- a/site/index.html
+++ b/site/index.html
@@ -39,7 +39,7 @@
 
 </head>
 
-<body lang="en" class="bp">
+<body lang="en" class="clear">
   <div id="container">
     <header>
       <div id="prelinks">
