--- a/site/Scratch/fr/index.html
+++ b/site/Scratch/fr/index.html
@@ -79,6 +79,7 @@
 </div>
 
 <div id="portable" class="slideshow">
+    <h3>Portable</h3>
     <p>You can use YPassword on: </p>
     <ul>
         <li> iPhone, </li>
