--- a/site/Scratch/en/index.html
+++ b/site/Scratch/en/index.html
@@ -62,7 +62,7 @@
             <div class="content">
                 
 <div id="secure" class="slideshow">
-    <img src="/img/main/iPhone pw.jpg" class="leftimage" alt="Main Password View" />
+    <img src="/img/main/iPhone_pw.jpg" class="leftimage" alt="Main Password View" />
     <h3>Secure</h3>
     <p>YPassword use SHA1</p>
     <div class="flush"></div>
