Fixed most blog view issues

--- a/site/Scratch/fr/support/index.html
+++ b/site/Scratch/fr/support/index.html
@@ -90,11 +90,15 @@
       <div id="webpageinfo">
           <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.fr">Droits de reproduction ©, Yann Esposito</a>
           <div>
+              Designed by <a href="htt://yannesposito.com">Yann Esposito</a>
+          </div>
+          <div>
               Site entièrement réalisé avec
-              <a href="http://www.vim.org">Vim</a>
+              <a href="http://www.vim.org">vim</a>,
+              <a href="http://nanoc.stoneship.org">nanoc</a>,
+              <a href="http://compass-style.org">compass</a>
               et 
-              <a href="http://nanoc.stoneship.org">nanoc</a>
-              <!-- TODO: add compass, blueprint -->
+              <a href="http://html5boilerplate">html5boilerplate</a>
           </div>
       </div>
     </footer>
