--- a/site/Scratch/en/index.html
+++ b/site/Scratch/en/index.html
@@ -110,11 +110,15 @@
       <div id="webpageinfo">
           <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Copyright ©, Yann Esposito</a>
           <div>
+              Designed by <a href="htt://yannesposito.com">Yann Esposito</a>
+          </div>
+          <div>
               Entirely done with
-              <a href="http://www.vim.org">Vim</a>
+              <a href="http://www.vim.org">vim</a>,
+              <a href="http://nanoc.stoneship.org">nanoc</a>,
+              <a href="http://compass-style.org">compass</a>
               and 
-              <a href="http://nanoc.stoneship.org">nanoc</a>
-              <!-- TODO: add compass, blueprint -->
+              <a href="http://html5boilerplate">html5boilerplate</a>
           </div>
       </div>
     </footer>
