Changed some presentation and content

--- a/site/Scratch/en/index.html
+++ b/site/Scratch/en/index.html
@@ -64,22 +64,30 @@
 <div id="secure" class="slideshow">
     <img src="/img/main/iPhone_pw.jpg" class="leftimage" alt="Main Password View" />
     <h3>Secure</h3>
-    <p>YPassword use SHA1</p>
+    <ul>
+    <li>Very strong passwords (up to 40 char)</li>
+    <li>From some password, nobody can:<br />
+           Retrieve your master password<br />
+           Discover another of your password
+    </li>
+    </ul>
     <div class="flush"></div>
 </div>
 
 <div id="easy" class="slideshow">
     <img src="/img/main/iPhone_Easy.jpg" alt="main view" class="rightimage" />
     <h3>Easy</h3>
-    <p>You remember only one password the rest follow.
-    If you click on "go to website" you are redirected to the website.
-    Your password is copied, you can paste it.
-    </p>
+    <ul>
+    <li>Remember only one master password.</li>
+    <li>Tap on login or password, it's copied</li>
+    <li>Tap <em>"go to website"</em>, your password is copied before going to the website
+    </li>
+    </ul>
     <div class="flush"></div>
 </div>
 
 <div id="portable" class="slideshow">
-    <h3>Portable</h3>
+    <h3 style="width: 100%">Portable</h3>
     <p>You can use YPassword on: </p>
     <ul>
         <li> iPhone, </li>
