--- a/site/Scratch/fr/support/index.html
+++ b/site/Scratch/fr/support/index.html
@@ -39,7 +39,7 @@
 
 </head>
 
-<body lang="fr" class="std">
+<body lang="fr" class="std support">
   <div id="container">
     <header>
       <div id="prelinks">
@@ -58,7 +58,8 @@
       <div id="main" role="main">
         <article>
             <div class="content">
-                <p>A problem? A remark? </p>
+                
+<h2 class="first" id="a-problem-a-remark">A problem? A remark?</h2>
 
 <form name="email" id="email" action="/contact" method="post">
 <input type="text" name="name" value="Your name" onfocus="this.value=<code>" style="display: block;width=20em" />
