New intro, more informations

--- a/site/Scratch/fr/index.html
+++ b/site/Scratch/fr/index.html
@@ -61,6 +61,20 @@
         <article>
             <div class="content">
                 
+<div id="helloblock">
+    <div id="logo">
+        <img src="/img/main/Logo.png" /></div>
+    <div id="blocktitle">Easy, Secure &amp; Portable Password Manager</div>
+    <div id="blocktext">
+        <p> One different password for each website.  <br />
+            If some are compromised, there is not way to find another one.<br />
+            You only have to remember one password.</p></div>
+     <div id="getit">
+        <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&amp;mt=8">
+            <img src="/img/main/GetIt.png" /></a></div>
+     <div class="flush"></div>
+</div>
+
 <div id="easy" class="slideshow">
     <img src="/img/main/iPhone_Easy.png" alt="main view" class="rightimage" />
     <h3>Easy</h3>
@@ -111,7 +125,7 @@
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li>modifié le : <time>12/07/2011</time></li>
+                    <li>modifié le : <time>13/07/2011</time></li>
                 </ul>
             </footer>
         </article>
