Added a new section (Get it!)

--- a/site/Scratch/fr/index.html
+++ b/site/Scratch/fr/index.html
@@ -45,17 +45,13 @@
       <div id="prelinks">
            <div id="choixlang"><a href="/Scratch/en/" onclick="setLanguage('en')">in English</a></div>
            <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomfr">s'abonner</a></div>
+           <nav id="mainnav"><ul><li><span class="active" title="You're here.">YPassword</span></li><li><a href="/Scratch/fr/getit/">L'avoir !</a></li><li><a href="/Scratch/fr/blog/">Blog</a></li><li><a href="/Scratch/fr/support/">Aide</a></li></ul><div class="flush"></div></nav>
        </div>
       <hgroup id="maintitle">
         <h1>YPassword</h1><h2>
     <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&mt=8">Get it! &raquo;</a>
 <h2>
       </hgroup>
-      <nav id="mainnav">
-          <ul>
-              <ul><li><span class="active" title="You're here.">YPassword</span></li><li><a href="/Scratch/fr/blog/">Blog</a></li><li><a href="/Scratch/fr/support/">Aide</a></li></ul>
-          </ul>
-      </nav>
     </header>
       <div id="main" role="main">
         <article>
@@ -125,7 +121,7 @@
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li>modifié le : <time>13/07/2011</time></li>
+                    <li>modifié le : <time>16/07/2011</time></li>
                 </ul>
             </footer>
         </article>
