--- a/site/Scratch/fr/support/index.html
+++ b/site/Scratch/fr/support/index.html
@@ -45,15 +45,11 @@
       <div id="prelinks">
            <div id="choixlang"><a href="/Scratch/en/support/" onclick="setLanguage('en')">in English</a></div>
            <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomfr">s'abonner</a></div>
+           <nav id="mainnav"><ul><li><a href="/Scratch/fr/">YPassword</a></li><li><a href="/Scratch/fr/getit/">L'avoir !</a></li><li><a href="/Scratch/fr/blog/">Blog</a></li><li><span class="active" title="You're here.">Aide</span></li></ul><div class="flush"></div></nav>
        </div>
       <hgroup id="maintitle">
         <h1>YPassword</h1><h2>Aide<h2>
       </hgroup>
-      <nav id="mainnav">
-          <ul>
-              <ul><li><a href="/Scratch/fr/">YPassword</a></li><li><a href="/Scratch/fr/blog/">Blog</a></li><li><span class="active" title="You're here.">Aide</span></li></ul>
-          </ul>
-      </nav>
     </header>
       <div id="main" role="main">
         <article>
