--- a/site/Scratch/en/support/index.html
+++ b/site/Scratch/en/support/index.html
@@ -45,15 +45,11 @@
       <div id="prelinks">
            <div id="choixlang"><a href="/Scratch/fr/support/" onclick="setLanguage('fr')">en Français</a></div>
            <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomen">Subscribe</a></div>
+           <nav id="mainnav"><ul><li><a href="/Scratch/en/">YPassword</a></li><li><a href="/Scratch/en/getit/">Get it!</a></li><li><a href="/Scratch/en/blog/">Blog</a></li><li><span class="active" title="You're here.">Support</span></li></ul><div class="flush"></div></nav>
        </div>
       <hgroup id="maintitle">
         <h1>YPassword</h1><h2>Support<h2>
       </hgroup>
-      <nav id="mainnav">
-          <ul>
-              <ul><li><a href="/Scratch/en/">YPassword</a></li><li><a href="/Scratch/en/blog/">Blog</a></li><li><span class="active" title="You're here.">Support</span></li></ul>
-          </ul>
-      </nav>
     </header>
       <div id="main" role="main">
         <article>
