--- a/site/index.html
+++ b/site/index.html
@@ -45,17 +45,13 @@
       <div id="prelinks">
            <div id="choixlang"><a href="/Scratch/fr/" onclick="setLanguage('fr')">en Français</a></div>
            <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomen">Subscribe</a></div>
+           <nav id="mainnav"><ul><li><span class="active" title="You're here.">YPassword</span></li><li><a href="/Scratch/en/getit/">Get it!</a></li><li><a href="/Scratch/en/blog/">Blog</a></li><li><a href="/Scratch/en/support/">Support</a></li></ul><div class="flush"></div></nav>
        </div>
       <hgroup id="maintitle">
         <h1>YPassword</h1><h2>
     <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&mt=8">Get it! &raquo;</a>
 <h2>
       </hgroup>
-      <nav id="mainnav">
-          <ul>
-              <ul><li><span class="active" title="You're here.">YPassword</span></li><li><a href="/Scratch/en/blog/">Blog</a></li><li><a href="/Scratch/en/support/">Support</a></li></ul>
-          </ul>
-      </nav>
     </header>
       <div id="main" role="main">
         <article>
@@ -125,7 +121,7 @@
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li>Modified: <time>07/13/2011</time></li>
+                    <li>Modified: <time>07/16/2011</time></li>
                 </ul>
             </footer>
         </article>
