Added a getit menu item with try it.

--- a/site/Scratch/fr/getit/index.html
+++ b/site/Scratch/fr/getit/index.html
@@ -55,11 +55,28 @@
         <article>
             <div class="content">
                 
-<p>YPassword is on <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&amp;mt=8">iOS</a></p>
+<table>
+<tr>
+    <td>For iPhone and iPad:</td> 
+    <td><a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&amp;mt=8" class="right"><img src="/img/main/Available_appstore.png" alt="Get it!" /></a></td>
+</tr>
+<tr>
+    <td> Dasboard widget (OS X) </td>
+    <td>
+        <a href="/files/YPassword-1.6.zip">
+            <img src="/img/getit/Dashboard_icon.png" alt="Get it!" height="60px" />
+        </a>
+    </td>
+</tr>
+</table>
 
-<p>Dashboard widget (TODO screenshot dashboard widget)</p>
+<p>And here is an online version:</p>
 
-<p>Put webapp:</p>
+<div style="text-align: center">
+<iframe src="http://web.me.com/yann.esposito/YPassword" width="480" height="160" frameborder="0" scrolling="no">
+ <p>Votre navigateur ne supporte pas les <code>iframes</code>.</p>
+</iframe>
+</div>
 
             </div>
             <footer>
