Fixed some alignment issue for blog

--- a/site/Scratch/en/index.html
+++ b/site/Scratch/en/index.html
@@ -66,8 +66,7 @@
             If some are compromised, there is not way to find another one.<br />
             You only have to remember one password.</p></div>
      <div id="getit">
-        <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&amp;mt=8">
-            <img src="/img/main/GetIt.png" /></a></div>
+        <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&amp;mt=8"><img src="/img/main/GetIt.png" /></a></div>
      <div class="flush"></div>
 </div>
 
