Switched to Sharies, 1st commit

--- a/site/Scratch/en/getit/index.html
+++ b/site/Scratch/en/getit/index.html
@@ -45,10 +45,10 @@
       <div id="prelinks">
            <div id="choixlang"><a href="/Scratch/fr/getit/" onclick="setLanguage('fr')">en Français</a></div>
            <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomen">Subscribe</a></div>
-           <nav id="mainnav"><ul><li><a href="/Scratch/en/">YPassword</a></li><li><span class="active" title="You're here.">Get it!</span></li><li><a href="/Scratch/en/blog/">Blog</a></li><li><a href="/Scratch/en/support/">Support</a></li></ul><div class="flush"></div></nav>
+           <nav id="mainnav"><ul><li><a href="/Scratch/en/">Sharies</a></li><li><span class="active" title="You're here.">Get it!</span></li><li><a href="/Scratch/en/blog/">Blog</a></li><li><a href="/Scratch/en/support/">Support</a></li></ul><div class="flush"></div></nav>
        </div>
       <hgroup id="maintitle">
-        <h1>YPassword</h1><h2>Get it!<h2>
+        <h1>Sharies</h1><h2>Get it!<h2>
       </hgroup>
     </header>
       <div id="main" role="main">
