--- a/site/Scratch/fr/index.html
+++ b/site/Scratch/fr/index.html
@@ -14,7 +14,7 @@
        Remove this if you use the .htaccess -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>YPassword</title>
+  <title>Sharies</title>
   <meta name="description" content="">
   <meta name="author" content="">
   
@@ -45,10 +45,10 @@
       <div id="prelinks">
            <div id="choixlang"><a href="/Scratch/en/" onclick="setLanguage('en')">in English</a></div>
            <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomfr">s'abonner</a></div>
-           <nav id="mainnav"><ul><li><span class="active" title="You're here.">YPassword</span></li><li><a href="/Scratch/fr/getit/">L'avoir !</a></li><li><a href="/Scratch/fr/blog/">Blog</a></li><li><a href="/Scratch/fr/support/">Aide</a></li></ul><div class="flush"></div></nav>
+           <nav id="mainnav"><ul><li><span class="active" title="You're here.">Sharies</span></li><li><a href="/Scratch/fr/getit/">L'avoir !</a></li><li><a href="/Scratch/fr/blog/">Blog</a></li><li><a href="/Scratch/fr/support/">Aide</a></li></ul><div class="flush"></div></nav>
        </div>
       <hgroup id="maintitle">
-        <h1>YPassword</h1><h2>
+        <h1>Sharies</h1><h2>
     <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&mt=8">Get it! &raquo;</a>
 <h2>
       </hgroup>
@@ -60,52 +60,41 @@
 <div id="helloblock">
     <div id="logo">
         <img src="/img/main/Logo.png" /></div>
-    <div id="blocktitle">Easy, Secure &amp; Portable Password Manager</div>
+    <div id="blocktitle">Share your stuff!</div>
     <div id="blocktext">
-        <p> One different password for each website.  <br />
-            If some are compromised, there is not way to find another one.<br />
-            You only have to remember one password.</p></div>
+        <p> Once you've read an inspiring book
+        <br /> Share it with others, just drop it somewhere
+        <br /> Take a photo and make it a sharie!</p></div>
      <div id="getit">
         <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&amp;mt=8"><img src="/img/main/GetIt.png" /></a></div>
      <div class="flush"></div>
 </div>
 
-<div id="easy" class="slideshow">
+<div class="slideshow">
     <img src="/img/main/iPhone_Easy.png" alt="main view" class="rightimage" />
-    <h3>Easy</h3>
-    <p>Remember only one Master Password</p>
+    <h3>Share</h3>
+    <p>You have an object you want to share?</p>
     <ol>
-    <li>Tab "go to website"</li>
-    <li>Paste</li>
-    <li>Enjoy</li>
-    </ol>
-    <ol>
-    <li>Tap on login or password, it's copied</li>
-    <li>Go in any other app</li>
-    <li>Paste</li>
-    <li>Enjoy</li>
+    <li>Drop it in a public area</li>
+    <li>Take a Photo</li>
+    <li>Share it!</li>
     </ol>
     <div class="flush"></div>
 </div>
 
-<div id="secure" class="slideshow">
+<div class="slideshow">
     <img src="/img/main/iPhone_pw.png" class="leftimage" alt="Main Password View" />
-    <h3>Secure</h3>
-    <p>Only strong password provided using SHA1</p>
-    <p>Knowing one of your password make it almost
-    impossible to know your master password or other 
-    passwords.</p>
+    <h3>Discover</h3>
+    <p>Open _sharies_ and find stuff around you!</p>
+    <p>Then just take it!</p>
+    <p>Once used, you could share it again.</p>
     <div class="flush"></div>
 </div>
 
-<div id="portable" class="slideshow">
-    <h3 style="width: 100%">Portable</h3>
-    <p>You can use YPassword on: </p>
-    <ul>
-        <li> iPhone, </li>
-        <li> Mac using Dashboard widget, </li>
-        <li> on UNIX system using the command line <code>openssl</code> </li>
-    </ul>
+<div class="slideshow">
+    <h3 style="width=100%">Watch their life</h3>
+    <p>You can follow the life of your object.</p>
+    <p>You can other people comment</p>
     <div class="flush"></div>
 </div>
 
