--- a/site/Scratch/fr/support/index.html
+++ b/site/Scratch/fr/support/index.html
@@ -45,10 +45,10 @@
       <div id="prelinks">
            <div id="choixlang"><a href="/Scratch/en/support/" onclick="setLanguage('en')">in English</a></div>
            <div id="choixrss"><a id="rss" href="http://feeds.feedburner.com/ypasswordespozitocomfr">s'abonner</a></div>
-           <nav id="mainnav"><ul><li><a href="/Scratch/fr/">YPassword</a></li><li><a href="/Scratch/fr/getit/">L'avoir !</a></li><li><a href="/Scratch/fr/blog/">Blog</a></li><li><span class="active" title="You're here.">Aide</span></li></ul><div class="flush"></div></nav>
+           <nav id="mainnav"><ul><li><a href="/Scratch/fr/">Sharies</a></li><li><a href="/Scratch/fr/getit/">L'avoir !</a></li><li><a href="/Scratch/fr/blog/">Blog</a></li><li><span class="active" title="You're here.">Aide</span></li></ul><div class="flush"></div></nav>
        </div>
       <hgroup id="maintitle">
-        <h1>YPassword</h1><h2>Aide<h2>
+        <h1>Sharies</h1><h2>Aide<h2>
       </hgroup>
     </header>
       <div id="main" role="main">
@@ -76,7 +76,7 @@
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li>modifié le : <time>08/08/2011</time></li>
+                    <li>modifié le : <time>10/08/2011</time></li>
                 </ul>
             </footer>
         </article>
