--- a/site/Scratch/en/support/index.html
+++ b/site/Scratch/en/support/index.html
@@ -48,7 +48,7 @@
            <nav id="mainnav"><ul><li><a href="/Scratch/en/">Sharies</a></li><li><a href="/Scratch/en/getit/">Get it!</a></li><li><a href="/Scratch/en/blog/">Blog</a></li><li><span class="active" title="You're here.">Support</span></li></ul><div class="flush"></div></nav>
        </div>
       <hgroup id="maintitle">
-        <h1>Sharies</h1><h2>Support<h2>
+        <h1><img src="/img/main/LogoName.png" width="200px" alt="Sharies"/></h1><h2>Support<h2>
       </hgroup>
     </header>
       <div id="main" role="main">
