--- a/site/index.html
+++ b/site/index.html
@@ -48,7 +48,7 @@
            <nav id="mainnav"><ul><li><span class="active" title="You're here.">Sharies</span></li><li><a href="/Scratch/en/getit/">Get it!</a></li><li><a href="/Scratch/en/blog/">Blog</a></li><li><a href="/Scratch/en/support/">Support</a></li></ul><div class="flush"></div></nav>
        </div>
       <hgroup id="maintitle">
-        <h1>Sharies</h1><h2>
+        <h1><img src="/img/main/LogoName.png" width="200px" alt="Sharies"/></h1><h2>
     <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=436268354&mt=8">Get it! &raquo;</a>
 <h2>
       </hgroup>
@@ -109,7 +109,7 @@
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li>Modified: <time>07/27/2011</time></li>
+                    <li>Modified: <time>10/12/2011</time></li>
                 </ul>
             </footer>
         </article>
